--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
 <p>Hi, my name is Steve Rydz and I&rsquo;m a front-end developer based in London. Right now I&rsquo;m working at Canonical, the company behind Ubuntu. This is my personal blog where I mostly write about web development but may stray into more personal topics occassionally.</p>
 
 <h3>Elsewhere</h3>
-<ul>
+<ul class="list-unstyled">
   <li><a href="https://twitter.com/steverydz">Twitter</a></li>
   <li><a href="https://github.com/steverydz">GitHub</a></li>
   <li><a href="https://instagram.com/steverydz">Instagram</a></li>
