Add some more basic styles

--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -1,3 +1,7 @@
+$body-bg-color: #fbfcff !default;
 $focus-bg-color: #cef !default;
+$link-color: #415781 !default;
+$link-color-hover: lighten($link-color, 10%) !default;
 $site-max-width: 40em !default;
 $site-width: 90% !default;
+$text-color: #111 !default;
