--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -9,8 +9,8 @@ html {
 }
 
 body {
-  background-color: #fff;
-  color: #111;
+  background-color: $body-bg-color;
+  color: $text-color;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 112.5%;
   line-height: 1.5;
@@ -27,8 +27,28 @@ body {
 }
 
 a {
+  color: $link-color;
+
+  &:hover {
+    color: $link-color-hover;
+  }
+
   &:focus {
     background-color: $focus-bg-color;
     outline: none;
   }
+}
+
+[href^="http"]:not([href*="steverydz.com"])::after {
+  background-image: url("../images/external-link.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 75% auto;
+  content: "(external link)";
+  display: inline-block;
+  height: 1em;
+  overflow: hidden;
+  text-indent: 1em;
+  white-space: nowrap;
+  width: 1em;
 }
