More style updates

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,20 +9,20 @@
 <body>
   <a href="#main">Skip to content</a>
   <div class="container">
-    <header role="banner">
-      <h1><a href="/">Steve Rydz</a></h1>
-      <p>Web developer, photographer, musician. He/him.</p>
+    <header class="site-header" role="banner">
+      <h1 class="site-title"><a href="/">Steve Rydz</a></h1>
+      <p class="site-description">Web developer, photographer, musician. He/him.</p>
     </header>
-    <main id="main" role="main">
+    <main class="site-content" id="main" role="main">
       {{ content }}
     </main>
-    <footer role="contentinfo">
-      <ul>
-        <li><a href="https://github.com/steverydz">GitHub</a></li>
-        <li><a href="https://instagram.com/steverydz">Instagram</a></li>
-        <li><a href="https://twitter.com/steverydz">Twitter</a></li>
+    <footer class="site-footer" role="contentinfo">
+      <p>&copy; 2007 &mdash; 2020 Steve Rydz</p>
+      <ul class="inline-list">
+        <li class="inline-list__item"><a href="https://github.com/steverydz">GitHub</a></li>
+        <li class="inline-list__item"><a href="https://instagram.com/steverydz">Instagram</a></li>
+        <li class="inline-list__item"><a href="https://twitter.com/steverydz">Twitter</a></li>
       </ul>
-      <p>&copy; 2007 &mdash; 2020 Steve Rydz. All rights reserved.</p>
     </footer>
   </div>
 </body>
