--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,5 +2,5 @@
 layout: default
 ---
 <h2>{{ page.title }}</h2>
-<p>{{ page.date | date: '%B %d, %Y' }}</p>
+<p class="post-date">Published on <time datetime="{{ page.date }}">{{ page.date | date: '%B %d, %Y' }}</time></p>
 {{ content }}
