--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  overflow-y: scroll;
 }
 
 *,
@@ -14,16 +15,22 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 112.5%;
   line-height: 1.5;
+  margin: 0;
 }
 
-[href="#main"] {
-  position: absolute;
-  right: 100%;
-  top: 0;
+p,
+ul,
+ol {
+  margin: 0 0 $default-margin;
+}
 
-  &:focus {
-    right: auto;
-  }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0 0 $default-margin;
 }
 
 a {
@@ -39,6 +46,16 @@ a {
   }
 }
 
+[href="#main"] {
+  position: absolute;
+  right: 100%;
+  top: 0;
+
+  &:focus {
+    right: auto;
+  }
+}
+
 [href^="http"]:not([href*="steverydz.com"])::after {
   background-image: url("../images/external-link.svg");
   background-position: center;
@@ -51,4 +68,18 @@ a {
   text-indent: 1em;
   white-space: nowrap;
   width: 1em;
+}
+
+.inline-list {
+  display: flex;
+  list-style: none;
+  padding-left: 0;
+}
+
+.inline-list__item {
+  margin-right: 1rem;
+
+  &:last-child {
+    margin-right: 0;
+  }
 }
