--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -1,7 +1,10 @@
 $body-bg-color: #fbfcff !default;
+$border-color: #ccc !default;
+$default-margin: 1.5rem !default;
 $focus-bg-color: #cef !default;
 $link-color: #415781 !default;
 $link-color-hover: lighten($link-color, 10%) !default;
-$site-max-width: 40em !default;
-$site-width: 90% !default;
+$site-max-width: 38em !default;
+$site-width: 96% !default;
 $text-color: #111 !default;
+$text-color-muted: #575757 !default;
