Add a meta description

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="The personal website of Steve Rydz where he shares his thoughts, findings and opinions">
   <title>{% if page.title %}{{ page.title }} | Steve Rydz{% else %}The personal website of Steve Rydz{% endif %}</title>
   <link rel="stylesheet" href="/css/main.css">
 </head>
