--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,5 +26,13 @@
       </ul>
     </footer>
   </div>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-4436239-6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-4436239-6', {'anonymize_ip': true});
+  </script>
 </body>
 </html>
