Add an about page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
       {{ content }}
     </main>
     <footer class="site-footer" role="contentinfo">
-      <p>&copy; 2007 &mdash; 2020 Steve Rydz</p>
+      <p>&copy; 2007 &mdash; 2020 <a href="/about">Steve Rydz</a></p>
       <ul class="inline-list">
         <li class="inline-list__item"><a href="https://github.com/steverydz">GitHub</a></li>
         <li class="inline-list__item"><a href="https://instagram.com/steverydz">Instagram</a></li>
