Make footer content small

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,11 +18,19 @@
       {{ content }}
     </main>
     <footer class="site-footer" role="contentinfo">
-      <p>&copy; 2007 &mdash; 2020 <a href="/about">Steve Rydz</a></p>
+      <p>
+        <small>&copy; 2007 &mdash; 2020 <a href="/about">Steve Rydz</a></small>
+      </p>
       <ul class="inline-list">
-        <li class="inline-list__item"><a href="https://github.com/steverydz">GitHub</a></li>
-        <li class="inline-list__item"><a href="https://instagram.com/steverydz">Instagram</a></li>
-        <li class="inline-list__item"><a href="https://twitter.com/steverydz">Twitter</a></li>
+        <li class="inline-list__item">
+          <small><a href="https://github.com/steverydz">GitHub</a></small>
+        </li>
+        <li class="inline-list__item">
+          <small><a href="https://instagram.com/steverydz">Instagram</a></small>
+        </li>
+        <li class="inline-list__item">
+          <small><a href="https://twitter.com/steverydz">Twitter</a></small>
+        </li>
       </ul>
     </footer>
   </div>
