Add link to RSS feed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,9 @@
         <li class="inline-list__item">
           <small><a href="https://twitter.com/steverydz">Twitter</a></small>
         </li>
+        <li class="inline-list__item">
+          <small><a href="/feed.xml">RSS</a></small>
+        </li>
       </ul>
     </footer>
   </div>
