--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,17 @@
     <header class="site-header" role="banner">
       <h1 class="site-title"><a href="/">Steve Rydz</a></h1>
       <p class="site-description">Web developer, photographer, musician. He/him.</p>
+      <ul class="inline-list">
+        <li class="inline-list__item">
+          <a href="/"{% if page.url == "/" %} aria-current="page"{% endif %}>Home</a>
+        </li>
+        <li class="inline-list__item">
+          <a href="/about"{% if page.url == "/about" %} aria-current="page"{% endif %}>About</a>
+        </li>
+        <li class="inline-list__item">
+          <a href="/feed.xml">RSS</a>
+        </li>
+      </ul>
     </header>
     <main class="site-content" id="main" role="main">
       {{ content }}
