--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -11,6 +11,7 @@ html {
 
 body {
   background-color: $body-bg-color;
+  border-top: 3px solid $brand-color;
   color: $text-color;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 112.5%;
