--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -1,9 +1,10 @@
 $body-bg-color: #fbfcff !default;
 $border-color: #ccc !default;
+$brand-color: #415781;
 $breakpoint-small: 42.5em !default;
 $default-margin: 1.5rem !default;
 $focus-bg-color: #cef !default;
-$link-color: #415781 !default;
+$link-color: $brand-color !default;
 $link-color-hover: lighten($link-color, 10%) !default;
 $site-max-width: 38em !default;
 $site-width: 90% !default;
