Update heading structure

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
   <a href="#main">Skip to content</a>
   <div class="container">
     <header class="site-header" role="banner">
-      <h1 class="site-title"><a href="/">Steve Rydz</a></h1>
+      <div class="site-title"><a href="/">Steve Rydz</a></div>
       <p class="site-description">Web developer, photographer, musician. He/him.</p>
       <ul class="inline-list">
         <li class="inline-list__item">
@@ -29,22 +29,12 @@
       {{ content }}
     </main>
     <footer class="site-footer" role="contentinfo">
-      <p>
-        <small>&copy; 2007 &mdash; 2020 <a href="/about">Steve Rydz</a></small>
-      </p>
+      <p>&copy; 2007 &mdash; 2020 <a href="/about">Steve Rydz</a></p>
       <ul class="inline-list">
-        <li class="inline-list__item">
-          <small><a href="https://github.com/steverydz">GitHub</a></small>
-        </li>
-        <li class="inline-list__item">
-          <small><a href="https://instagram.com/steverydz">Instagram</a></small>
-        </li>
-        <li class="inline-list__item">
-          <small><a href="https://twitter.com/steverydz">Twitter</a></small>
-        </li>
-        <li class="inline-list__item">
-          <small><a href="/feed.xml">RSS</a></small>
-        </li>
+        <li class="inline-list__item"><a href="https://github.com/steverydz">GitHub</a></li>
+        <li class="inline-list__item"><a href="https://instagram.com/steverydz">Instagram</a></li>
+        <li class="inline-list__item"><a href="https://twitter.com/steverydz">Twitter</a></li>
+        <li class="inline-list__item"><a href="/feed.xml">RSS</a></li>
       </ul>
     </footer>
   </div>
