--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="The personal website of Steve Rydz where he shares his thoughts, findings and opinions">
-  <title>{% if page.title %}{{ page.title }} | Steve Rydz{% else %}The personal website of Steve Rydz{% endif %}</title>
+  <meta name="description" content="{{ site.description }}">
+  <title>{% if page.title %}{{ page.title }} | Steve Rydz{% else %}{{ site.subtitle }}{% endif %}</title>
   <link rel="stylesheet" href="/css/main.css">
+  <meta name="og:title" content="{% if page.title %}{{ page.title }} | Steve Rydz{% else %}{{ site.subtitle }}{% endif %}">
+  <meta name="og:type" content="website">
+  <meta name="og:url" content="{{ site.url }}{{ page.url }}">
+  <meta name="og:image" content="https://steverydz.com/images/social/opengraph-image.jpg">
 </head>
 <body>
   <a href="#main">Skip to content</a>
