--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,10 +6,17 @@
   <meta name="description" content="{{ site.description }}">
   <title>{% if page.title %}{{ page.title }} | Steve Rydz{% else %}{{ site.subtitle }}{% endif %}</title>
   <link rel="stylesheet" href="/css/main.css">
-  <meta name="og:title" content="{% if page.title %}{{ page.title }} | Steve Rydz{% else %}{{ site.subtitle }}{% endif %}">
-  <meta name="og:type" content="website">
-  <meta name="og:url" content="{{ site.url }}{{ page.url }}">
-  <meta name="og:image" content="https://steverydz.com/images/social/opengraph-image.jpg">
+  <meta property="og:url" content="{{ site.url }}{{ page.url }}">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="The personal website of Steve Rydz">
+  <meta property="og:description" content="{{ site.description }}">
+  <meta property="og:image" content="https://steverydz.com/images/social/opengraph-image.jpg">
+  <meta name="twitter:card" content="{{ site.description }}">
+  <meta property="twitter:domain" content="{{ site.url }}">
+  <meta property="twitter:url" content="{{ site.url }}{{ page.url }}">
+  <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
+  <meta name="twitter:description" content="{{ site.description }}">
+  <meta name="twitter:image" content="https://steverydz.com/images/social/opengraph-image.jpg">
 </head>
 <body>
   <a href="#main">Skip to content</a>
