--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,13 +10,13 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
   <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
-  <meta property="og:image" content="https://steverydz.com/images/social/opengraph-image.jpg">
+  <meta property="og:image" content="{% if page.image %}{{ page.image }}{% else %}{{ default_image }}{% endif %}">
   <meta name="twitter:card" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
   <meta property="twitter:domain" content="{{ site.url }}">
   <meta property="twitter:url" content="{{ site.url }}{{ page.url }}">
   <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
   <meta name="twitter:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
-  <meta name="twitter:image" content="https://steverydz.com/images/social/opengraph-image.jpg">
+  <meta name="twitter:image" content="{% if page.image %}https://steverydz.com/images/social/{{ page.image }}.jpg{% else %}{{ site.default_image }}{% endif %}">
 </head>
 <body>
   <a href="#main">Skip to content</a>
