--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -13,7 +13,8 @@ body {
   background-color: $body-bg-color;
   border-top: 3px solid $brand-color;
   color: $text-color;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "Open Sans", sans-serif;
+  ;
   font-size: 112.5%;
   line-height: 1.5;
   margin: 0;
