--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -13,7 +13,7 @@ body {
   background-color: $body-bg-color;
   border-top: 3px solid $brand-color;
   color: $text-color;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
   ;
   font-size: 112.5%;
   line-height: 1.5;
