--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -16,14 +16,14 @@ body {
   font-family: "Roboto", sans-serif;
   ;
   font-size: 112.5%;
-  line-height: 1.5;
+  line-height: 1.75;
   margin: 0;
 }
 
 p,
 ul,
 ol {
-  margin: 0 0 $default-margin;
+  margin: 0 0 1rem;
 }
 
 h1,
@@ -33,7 +33,34 @@ h4,
 h5,
 h6 {
   font-weight: normal;
-  margin: 0 0 $default-margin;
+  line-height: 1.3;
+  margin: 3rem 0 1.38rem;
+}
+
+h1 {
+  font-size: 2.4888rem;
+  margin-top: 0;
+}
+
+h2 {
+  font-size: 2.074rem;
+}
+
+h3 {
+  font-size: 1.728rem;
+}
+
+h4 {
+  font-size: 1.44rem;
+}
+
+h5,
+h6 {
+  font-size: 1.2rem;
+}
+
+small {
+  font-size: 0.8333rem;
 }
 
 a {
