Clean up styles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
   <a href="#main">Skip to content</a>
   <div class="container">
     <header class="site-header" role="banner">
-      <div class="site-title"><a href="/">Steve Rydz</a></div>
+      <div class="h2 u-no-margin--bottom"><a class="site-title-link" href="/">Steve Rydz</a></div>
       <p class="site-description">Web developer, photographer, musician. He/him.</p>
       <ul class="inline-list">
         <li class="inline-list__item">
@@ -42,7 +42,7 @@
       {{ content }}
     </main>
     <footer class="site-footer" role="contentinfo">
-      <p>&copy; 2007 &mdash; 2020 <a href="/about">Steve Rydz</a></p>
+      <p class="u-no-margin--bottom">&copy; 2007 &mdash; 2020 <a href="/about">Steve Rydz</a></p>
       <ul class="inline-list">
         <li class="inline-list__item"><a href="https://github.com/steverydz">GitHub</a></li>
         <li class="inline-list__item"><a href="https://instagram.com/steverydz">Instagram</a></li>
