--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -14,7 +14,6 @@ body {
   border-top: 3px solid $brand-color;
   color: $text-color;
   font-family: "Roboto", sans-serif;
-  ;
   font-size: 112.5%;
   line-height: 1.75;
   margin: 0;
@@ -23,7 +22,7 @@ body {
 p,
 ul,
 ol {
-  margin: 0 0 1rem;
+  margin: 0 0 $default-margin;
 }
 
 h1,
@@ -46,7 +45,6 @@ h6,
 h1,
 .h1 {
   font-size: 2.4888rem;
-  margin-top: 0;
 }
 
 h2,
@@ -72,7 +70,7 @@ h6,
 }
 
 small,
-.small-text {
+.u-small-text {
   font-size: 0.8333rem;
 }
 
@@ -111,7 +109,7 @@ img {
 }
 
 .inline-list__item {
-  margin-right: 0.75rem;
+  margin-right: $default-margin;
 
   &:last-child {
     margin-right: 0;
