--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,5 +2,5 @@
 layout: default
 ---
 <h1>{{ page.title }}</h1>
-<p class="post-date">Published on <time datetime="{{ page.date }}">{{ page.date | date: '%B %d, %Y' }}</time></p>
+<p>Published on <time datetime="{{ page.date }}">{{ page.date | date: '%B %d, %Y' }}</time></p>
 {{ content }}
