--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -69,8 +69,7 @@ h6,
   font-size: 1.2rem;
 }
 
-small,
-.u-small-text {
+small {
   font-size: 0.8333rem;
 }
 
@@ -99,19 +98,5 @@ img {
 
   &:focus {
     right: auto;
-  }
-}
-
-.inline-list {
-  display: flex;
-  list-style: none;
-  padding-left: 0;
-}
-
-.inline-list__item {
-  margin-right: $default-margin;
-
-  &:last-child {
-    margin-right: 0;
   }
 }
