--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -1,6 +1,11 @@
 html {
   box-sizing: border-box;
+  font-size: 100%;
   overflow-y: scroll;
+
+  @media only screen and (min-width: $breakpoint-small) {
+    font-size: 112.5%;
+  }
 }
 
 *,
@@ -14,7 +19,6 @@ body {
   border-top: 3px solid $brand-color;
   color: $text-color;
   font-family: "Roboto", sans-serif;
-  font-size: 112.5%;
   line-height: 1.75;
   margin: 0;
 }
