--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -1,28 +1,25 @@
 @font-face {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local(''),
-       url('../fonts/Roboto-Regular.ttf') format('truetype');
+  src: local(""), url("../fonts/Roboto-Regular.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: local(''),
-       url('../fonts/Roboto-Italic.ttf') format('truetype');
+  src: local(""), url("../fonts/Roboto-Italic.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: local(''),
-       url('../fonts/Roboto-Bold.ttf') format('truetype');
+  src: local(""), url("../fonts/Roboto-Bold.ttf") format("truetype");
 }
 
 html {
@@ -136,7 +133,7 @@ code {
   background-color: #eee;
   border: 1px solid $border-color;
   display: inline-block;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   padding: 0 0.3rem;
 }
 
