--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -1,6 +1,6 @@
 $body-bg-color: #fbfcff !default;
 $border-color: #ccc !default;
-$brand-color: #415781;
+$brand-color: #415781 !default;
 $breakpoint-small: 42.5em !default;
 $default-margin: 1rem !default;
 $focus-bg-color: #cef !default;
