--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -1,27 +1,3 @@
-@font-face {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local(""), url("../fonts/Roboto-Regular.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Roboto";
-  font-style: italic;
-  font-weight: 400;
-  font-display: swap;
-  src: local(""), url("../fonts/Roboto-Italic.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: local(""), url("../fonts/Roboto-Bold.ttf") format("truetype");
-}
-
 html {
   box-sizing: border-box;
   font-size: 100%;
@@ -42,7 +18,7 @@ body {
   background-color: $body-bg-color;
   border-top: 3px solid $brand-color;
   color: $text-color;
-  font-family: "Roboto", sans-serif;
+  font-family: sans-serif;
   line-height: 1.75;
   margin: 0;
 }
